k8s/nginx-aws/service-lb-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: nginx
  type: LoadBalancer
